Fix text wrap

--- a/src/Components/Main/SideNav/NavItem/NavItem.css
+++ b/src/Components/Main/SideNav/NavItem/NavItem.css
@@ -2,6 +2,7 @@
     padding: 5px;
     font-size: 1.1em;
     display: block;
+    white-space: nowrap;
 }
 
 #SideNav .angle {
